--- a/includes/bank.pug
+++ b/includes/bank.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title Банкинг - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)
+  title Банкінг - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
 
 block menu
   - var current = 'Банкинг'
@@ -154,11 +154,11 @@ block content
           li
             div.icon.webmoney.ru
             a(href='https://www.webmoney.ru/', target='_blank') webmoney.ru
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
           li
             div.icon.money.yandex.ru
             a(href='https://money.yandex.ru/', target='_blank') money.yandex.ru
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
           li
             div.icon.qiwi.com
             a(href='https://qiwi.com/', target='_blank') qiwi.com
