--- a/includes/city.pug
+++ b/includes/city.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title Городок - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)
+  title Городок - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
 
 block menu
   - var current = 'Городок'
@@ -41,7 +41,7 @@ block content
           li
             div.icon.vk.com
             a(href='https://vk.com/novomyrhorod_baraholka', target='_blank') БАРАХОЛКА (рынок)
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
           li
             div.icon.youtube
             a(href='https://www.youtube.com/channel/UCKjCg071hg21YxymgDfz5TA', target='_blank') Youtube_г.Новомиргород
