--- a/includes/communal.pug
+++ b/includes/communal.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title Комуналка - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)
+  title Комуналка - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
 
 block menu
   - var current = 'Комуналка'
@@ -62,11 +62,11 @@ block content
             a(href='https://youtu.be/qIJYbNR_l6g', target='_blank')
               div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК', alt='')
           li
-            div.icon.a0pencil-1(title='Текстовая информация', alt='')
+            div.icon.a0pencil-1(title='Текстова інформація', alt='')
             a(href='https://ok.kiroe.com.ua/home', target='_blank') Кабінет електро 2022
             div.icontooinfo.a0repa3(title='Особистий кабінет побутового споживача ПрАТ Кіровоградобленерго', alt='')
           li
-            div.icon.a0pencil-1(title='Текстовая информация', alt='')
+            div.icon.a0pencil-1(title='Текстова інформація', alt='')
             a(href='https://koek.billing.city/login', target='_blank') Кабінет електро 2020
             div.icontooinfo.a0repa3(title='Огляд листівки від КОЕК', alt='')
             a(href='https://youtu.be/qIJYbNR_l6g', target='_blank')
@@ -121,9 +121,9 @@ block content
             a(href='https://youtu.be/nsknyxq9alo', target='_blank')
               div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как узнать суму задолженности и ее оплатить', alt='')
           li
-            div.icon.novom.ulan.in.ua
-            a(href='http://novom.ulan.in.ua/', target='_blank') novom.ulan.in.ua
-            span.opisi Ulan ISP
+            div.icon.optonet.com.ua
+            a(href='https://optonet.com.ua/', target='_blank') optonet.com.ua
+            span.opisi Optonet
           li
             div.icon.shtorm.net
             a(href='https://www.shtorm.net/uk', target='_blank') shtorm.net
