--- a/includes/index.pug
+++ b/includes/index.pug
@@ -10,7 +10,7 @@ block menu
   
 block meta
   meta(name='keywords', content='best sait, лучшие сайты, популярные сайты, каталог сайтов, быстрые ссылки, cписок найпопулярніших веб-сайтів, zakladki, top, топ сайтів, speeddial, новости, соцсети, видео, погода')
-  meta(name='description', content='Полный список самых популярных сайтов интернета. Удобный каталог сайтов с сортировкой по тематике. Все топ сайты в одном месте. Все для удобства в интернете.')
+  meta(name='description', content='Повний перелік найпопулярніших веб-сайтів вебу. Зручний каталог сайтів із сортуванням за тематикою. Усі топ сайти в одному місці. Все для зручності в Інтернеті.')
   
 block content
   .row.animated.fadeIn
@@ -25,8 +25,8 @@ block content
             a(href='https://www.google.com.ua/', target='_blank') Пошук Google
           //li
             div.yandex.icon
-            a(href='https://yandex.ua/', target='_blank') Поиск Yandex
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+            a(href='https://yandex.ua/', target='_blank') Пошук Yandex
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
           li
             div.icon.translate.google.com.ua
             a(href='https://translate.google.com.ua/', target='_blank') Перекладач Google
@@ -53,11 +53,11 @@ block content
           //li
             div.icon.vk.com
             a(href='https://vk.com/', target='_blank') ВКонтакте
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
           //li
             div.icon.ok.ru
             a(href='https://ok.ru/', target='_blank') Однокласники
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
           li
             div.icon.gmail
             a(href='https://mail.google.com', target='_blank') пошта_gmail
@@ -70,7 +70,7 @@ block content
           li
             div.icon.e.mail.ru
             a(href='https://e.mail.ru/login', target='_blank') пошта_mail.ru
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
       .group
         .group-title
           a(href='/news.html')
@@ -189,7 +189,7 @@ block content
             a(href='https://youtu.be/qIJYbNR_l6g', target='_blank')
               div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК', alt='')
           li
-            div.icon.a0pencil-1(title='Текстовая информация', alt='')
+            div.icon.a0pencil-1(title='Текстова інформація', alt='')
             a(href='https://ok.kiroe.com.ua/home', target='_blank') Кабінет електро 2022
             div.icontooinfo.a0repa3(title='Особистий кабінет побутового споживача ПрАТ Кіровоградобленерго', alt='')
           li
@@ -197,18 +197,23 @@ block content
             a(href='https://ukrtelecom.ua/', target='_blank') ukrtelecom
             span.opisi Оплата
             a(href='https://youtu.be/WYhA_JFRVik', target='_blank')
-              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как узнать суму задолженности и ее оплатить', alt='')
+              div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Як дізнатися суму заборгованості та її сплатити', alt='')
           li
             div.icon.my.vega.ua
             a(href='https://my.vega.ua/', target='_blank') Vega Telecom
-            div.icontooinfo.a0repa3(title='Раздел-Комуналка. Vega Telecom - Національний телеком-оператор в Україні', alt='')
+            div.icontooinfo.a0repa3(title='Розділ-Комуналка. Vega Telecom - Національний телеком-оператор в Україні', alt='')
             a(href='https://youtu.be/4accV-xUU30', target='_blank')
-              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Переход абонентов Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком', alt='')
+              div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Перехід абонентів Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком', alt='')
             a(href='https://youtu.be/nsknyxq9alo', target='_blank')
-              div.icontooinfo.a0youtubeinform(title='Видеоинструкция. Как узнать суму задолженности и ее оплатить', alt='')
+              div.icontooinfo.a0youtubeinform(title='Відеоінструкція. Як дізнатися суму заборгованості та її сплатити', alt='')
           li
-            div.icon.skylink_vk
-            a(href='http://sky-link.com.ua/', target='_blank') Sky-link
+            div.icon.optonet.com.ua
+            a(href='https://optonet.com.ua/', target='_blank') optonet.com.ua
+            span.opisi Optonet
+          li
+            div.icon.shtorm.net
+            a(href='https://www.shtorm.net/uk', target='_blank') shtorm.net
+            span.opisi Shtorm
           li
             div.icon.kyivstar.ua
             a(href='https://kyivstar.ua/', target='_blank') kyivstar.ua
@@ -241,7 +246,7 @@ block content
             span.opisi Інтерн.гаманець
           li
             div.icon.payeer.com
-            a(href='https://payeer.com/?partner=1687223', target='_blank') payeer`
+            a(href='https://payeer.com/', target='_blank') payeer
             span.opisi Інтерн.гаманець
           li
             div.icon.minfin.com.ua
@@ -300,35 +305,35 @@ block content
             span.opisi Все дешевле
           li
             div.icon.best.aliexpress.com
-            a(href='https://letyshops.com/r/aliexpress-ww-288bce24ac9a', target='_blank') best.aliexpress.com`
+            a(href='https://best.aliexpress.com', target='_blank') best.aliexpress.com`
           li
             div.icon.rozetka.com.ua
-            a(href='https://letyshops.com/r/rozetka-1bf2104efe2d', target='_blank') rozetka.com.ua`
+            a(href='https://rozetka.com.ua', target='_blank') rozetka.com.ua`
           li
             div.icon.allo.ua
-            a(href='https://letyshops.com/r/allo-fdff83d9e607', target='_blank') allo.ua`
+            a(href='https://allo.ua', target='_blank') allo.ua`
           li
             div.icon.moyo.ua
-            a(href='https://letyshops.com/r/moyo-ua-98af1fd3453d', target='_blank') moyo.ua`
+            a(href='https://moyo.ua', target='_blank') moyo.ua`
           li
             div.icon.stylus.ua
-            a(href='https://letyshops.com/r/stylus-20dc1c96e7c7', target='_blank') stylus.ua`
+            a(href='https://stylus.ua', target='_blank') stylus.ua`
           li
             div.icon.skidka.ua
-            a(href='https://letyshops.com/r/skidka-ua-38859dfd47b9', target='_blank') skidka.ua`
+            a(href='https://skidka.ua', target='_blank') skidka.ua`
           li
             div.icon.f.ua
-            a(href='https://letyshops.com/r/f-ua-tot-samyi-magazin-eacd5b66c959', target='_blank') f.ua`
+            a(href='https://f.ua', target='_blank') f.ua`
           li
             div.icon.xiaomi.ua
-            a(href='https://letyshops.com/r/xiaomi-ua-d11562e6217b', target='_blank') xiaomi.ua`
+            a(href='https://xiaomi.ua', target='_blank') xiaomi.ua`
           li
             div.icon.intertop.ua
-            a(href='https://letyshops.com/r/intertop-ua-d4e3bd859cbf', target='_blank') intertop.ua`
+            a(href='https://intertop.ua', target='_blank') intertop.ua`
           li
             div.icon.med-magazin.ua
-            a(href='https://letyshops.com/r/med-magazin-ua-db16742e5c0c', target='_blank') med-magazin.ua`
-            div.icontooinfo.a0repa3(title='Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине', alt='')
+            a(href='https://med-magazin.ua', target='_blank') med-magazin.ua`
+            div.icontooinfo.a0repa3(title='Med-Magazin - мережа магазинів медтехніки, медобладнання та товарів для здоровя в Україні', alt='')
           li
             div.icon.apteka24.ua
             a(href='https://www.apteka24.ua/', target='_blank') apteka24.ua
@@ -343,16 +348,16 @@ block content
           li
             div.icon.rutracker.org
             a(href='https://rutracker.org/', target='_blank') rutracker.org
-            div.icontooinfo.a0_Group_m(title='Для скачивания нужна программа TORRENT', alt='')
+            div.icontooinfo.a0_Group_m(title='Для завантаження потрібна програма TORRENT', alt='')
           li
             div.icon.nnmclub.to
             a(href='http://nnmclub.to/', target='_blank') nnmclub.to
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
-            div.icontooinfo.a0_Group_m(title='Для скачивания нужна программа TORRENT', alt='')
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
+            div.icontooinfo.a0_Group_m(title='Для завантаження потрібна програма TORRENT', alt='')
           li
             div.icon.filmitorrent
             a(href='http://filmitorrent.net/', target='_blank') filmitorrent_TOP
-            div.icontooinfo.a0_Group_m(title='Для скачивания нужна программа TORRENT', alt='')
+            div.icontooinfo.a0_Group_m(title='Для завантаження потрібна програма TORRENT', alt='')
           li
             div.icon.rutor.info
             a(href='http://rutor.info/', target='_blank') rutor.info
@@ -402,7 +407,7 @@ block content
           li
             div.icon.vk.com
             a(href='https://vk.com/novomyrhorod_baraholka', target='_blank') ринок.БАРАХОЛКА
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
           li
             div.icon.youtube
             a(href='https://www.youtube.com/channel/UCKjCg071hg21YxymgDfz5TA', target='_blank') Youtube_г.Новомиргород
@@ -424,37 +429,37 @@ block content
             span.badge.badge-danger Обновки в закладках: v.2022-03-30
         ul
           li
-            div.icon.a0pencil-1(title='Текстовая информация', alt='')
+            div.icon.a0pencil-1(title='Текстова інформація', alt='')
             a(href='https://war.ukrzen.in.ua/alerts/', target='_blank') Карта повітряних тривог
             div.icontooinfo.a0repa3(title='Візуалізація, - онлайн карта повітряних тривог в Україні', alt='')        
           li
-            div.icon.a0pencil-1(title='Текстовая информация', alt='')
+            div.icon.a0pencil-1(title='Текстова інформація', alt='')
             a(href='https://liveuamap.com/', target='_blank') Карта війни в Україні
             div.icontooinfo.a0repa3(title='Візуалізація, - онлайн карта бойових дій в Україні', alt='')
           li
             div.icon.repka.ua
-            a(href='https://letyshops.com/r/repka-ua-7352c7232593', target='_blank') repka.ua`
-            div.icontooinfo.a0repa3(title='Repka.UA - Лучший сервис и условия доставки по всей Украине. Ноутбуки Смартфоны Бытовая техника Наручные часы Товары для отдыха', alt='')
+            a(href='https://repka.ua', target='_blank') repka.ua`
+            div.icontooinfo.a0repa3(title='Repka.UA - Кращий сервіс та умови доставки по всій Україні. Ноутбуки Смартфони Побутова техніка Наручний годинник Товари для відпочинку', alt='')
           li
-            div.icon.a0pencil-1(title='Текстовая информация', alt='')
+            div.icon.a0pencil-1(title='Текстова інформація', alt='')
             a(href='https://covid19.who.int/', target='_blank') Карта коронавіруса MIR
-            div.icontooinfo.a0repa3(title='Вся статистика по коронавирусу, по всей земле', alt='')
+            div.icontooinfo.a0repa3(title='Вся статистика з коронавірусу, по всій землі', alt='')
           li
             div.icon.silvergames
             a(href='https://www.silvergames.com/ru/', target='_blank') silvergames.com
-            div.icontooinfo.a0repa7(title='Играть В Классные Бесплатные Онлайн Игры На Silvergames.com', alt='')
+            div.icontooinfo.a0repa7(title='Грати в класні безкоштовні онлайн ігри на Silvergames.com', alt='')
           li
-            div.icon.a0youtubeinform(title='Видео информация', alt='')
+            div.icon.a0youtubeinform(title='Відео інформація', alt='')
             a(href='https://zakladki.github.io/media.html', target='_blank') Обновка.MP3.UA+ZAP
-            div.icontooinfo.a0repa3(title='Раздел-Медиа. Обновлен плеер для прослушивания украинской/русской/зарубежной музыки', alt='')
+            div.icontooinfo.a0repa3(title='Розділ-Медіа. Оновлено плеєр для прослуховування української/російської/зарубіжної музики', alt='')
           li
-            div.icon.a0youtubeinform(title='Видео информация', alt='')
-            a(href='https://youtu.be/BdZQy6upWFc', target='_blank') Настройка ZAKLADOK
-            div.icontooinfo.a0repa3(title='Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне', alt='')
+            div.icon.a0youtubeinform(title='Відео інформація', alt='')
+            a(href='https://youtu.be/BdZQy6upWFc', target='_blank') Настройка ЗАКЛАДОК
+            div.icontooinfo.a0repa3(title='Як швидко налаштувати ЗАКЛАДКИ на компютері, ноутбуці, смартфоні', alt='')
           li
             div.icon.costaction.com
             a(href='http://costaction.com/partner/?PHPSESUD=CEADEE4DA51FAECA3ED6C17C6A9191A5', target='_blank') Зберігання файлів`
-            div.icontooinfo.a0repa3(title='Раздел-Программы. Вы будете получать деньги за каждое скачивание Вашего файла. Просто загрузите файлы на Turbobit.net и Hitfile.net, обменивайтесь ими со своим друзьями, и незнакомцами через блоги, социальные сети, форумы или свои сайты!', alt='')
+            div.icontooinfo.a0repa3(title='Розділ-програми. Ви отримуватимете гроші за кожне скачування Вашого файлу. Просто завантажте файли на Turbobit.net та Hitfile.net, обмінюйтеся ними зі своїми друзями та незнайомцями через блоги, соціальні мережі, форуми або свої сайти!', alt='')
 
           // тут реклама от ГУГЛ
           //- script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
