--- a/includes/media.pug
+++ b/includes/media.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title Медиа - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)
+  title Медіа - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
 
 block menu
   - var current = 'Медиа'
@@ -114,7 +114,7 @@ block content
           li
             div.icon.kinopoisk.ru
             a(href='https://www.kinopoisk.ru/', target='_blank') kinopoisk.ru
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
         .group
           .group-title
             span.badge.badge-success Сериалы онлайн
@@ -199,15 +199,15 @@ block content
           li
             div.icon.vk.com
             a(href='https://vk.com/mzk', target='_blank') vk.com/mzk
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
           li
             div.icon.vk.com
             a(href='https://vk.com/exclusive_muzic', target='_blank') vk/exclusive_muzic
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
           li
             div.icon.vk.com
             a(href='https://vk.com/hit_bit', target='_blank') vk/hit_bit
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
           li
             div.icon.web.telegram.org
             a(href='https://t.me/music_breakbeat', target='_blank') music_breakbeat (hit_bit)
