--- a/includes/news.pug
+++ b/includes/news.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title Новости - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)
+  title Новини - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
   
 block menu
   - var current = 'Новости'
