--- a/includes/programs.pug
+++ b/includes/programs.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title Программы - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)
+  title Программи - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
 
 block menu
   - var current = 'Программы'
@@ -27,7 +27,7 @@ block content
           span.badge.badge-warning Всякие настройки
         ul
           li
-            div.icon.a0youtubeinform(title='Видео информация', alt='')
+            div.icon.a0youtubeinform(title='Відео інформація', alt='')
             a(href='https://youtu.be/BdZQy6upWFc', target='_blank') Настройка сайта ZAKLADOK
             div.icontooinfo.a0repa3(title='Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне', alt='')
       .group
