--- a/includes/shops.pug
+++ b/includes/shops.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title Магазины - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)
+  title Магазини - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
 
 block menu
   - var current = 'Магазины'
