--- a/includes/social.pug
+++ b/includes/social.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title Социум - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)
+  title Соціум - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
   
 block menu
   - var current = 'Социум'
@@ -13,41 +13,41 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-warning Загрузить мессенджеры
+          span.badge.badge-warning Завантажити месенджери
         ul
           li
             div.icon.telegram
-            a(href='https://tlgrm.ru/apps', target='_blank') Скачать TELEGRAM
+            a(href='https://tlgrm.ru/apps', target='_blank') Завантажити TELEGRAM
           li
             div.icon.viber
-            a(href='https://www.viber.com/ru/download/', target='_blank') Скачать VIBER
+            a(href='https://www.viber.com/ru/download/', target='_blank') Завантажити VIBER
           li
             div.icon.skype
-            a(href='https://www.skype.com/ru/get-skype/', target='_blank') Скачать SKYPE
+            a(href='https://www.skype.com/ru/get-skype/', target='_blank') Завантажити SKYPE
             
       .group
         .group-title
-          span.badge.badge-warning Прокачать свой TELEGRAM (канал)
+          span.badge.badge-warning Прокачати свій TELEGRAM (канал)
         ul
           li
             div.icon.telemetr.me
             a(href='https://telemetr.me/r/yQsP9VE/', target='_blank') telemetr.me`
-            div.icontooinfo.a0repa3(title='Раздел-Социум. Телеметр - аналитика/каталог Телеграм-каналов (Условие: free + нужно иметь 500 подписчиков)', alt='')
+            div.icontooinfo.a0repa3(title='Розділ-соціум. Телеметр - аналітика/каталог Телеграм-каналів (Умова: free + потрібно мати 500 передплатників)', alt='')
             span.opisi free500+rek+stat
           li
             div.icon.tgstat.com
             a(href='https://uk.tgstat.com/', target='_blank') tgstat.com
-            div.icontooinfo.a0repa3(title='Раздел-Социум. Добавление канала в каталог бесплатно/статистика/реклама (Условие: БЕСПЛАТНО добавить любой канал в каталог! +Рекламная площадка УДОБНАЯ)', alt='')
+            div.icontooinfo.a0repa3(title='Розділ-соціум. Додавання каналу до каталогу безкоштовно/статистика/реклама (Умова: БЕЗКОШТОВНО додати будь-який канал до каталогу! +Рекламний майданчик Зручний)', alt='')
             span.opisi free0+rek+stat
           li
             div.icon.telega.in
             a(href='https://telega.in/?ref=Tjy-BcZy', target='_blank') telega.in`
-            div.icontooinfo.a0repa3(title='Раздел-Социум. Рекламная площадка. (Условие: добавить канал +100 подписчиков.)', alt='')
+            div.icontooinfo.a0repa3(title='Розділ-соціум. Рекламний майданчик. (Умова: додати канал +100 передплатників.)', alt='')
             span.opisi free100+rek            
           li
             div.icon.tgrm.su
             a(href='https://tgrm.su/channels/', target='_blank') tgrm.su
-            div.icontooinfo.a0repa3(title='Раздел-Социум. Прокачка канала. (Условие: чтобы добавить любой канал в каталог +79 рублей. Поднятия канала в ТОП: 250р/три дня; 500р/на неделю; 1500/на месяц)', alt='')
+            div.icontooinfo.a0repa3(title='Розділ-соціум. Прокачування каналу. (Умова: щоб додати будь-який канал у каталог +79 рублів. Підняття каналу в ТОП: 250р/три дні; 500р/на тиждень; 1500/на місяць)', alt='')
             span.opisi 79р.+top250р.
 
           // тут реклама от ГУГЛ - 3 колонки-вконце 336-280
@@ -60,7 +60,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success Социальные сети - Зарубеж
+          span.badge.badge-success Соціальні мережі - Зарубіж
         ul
           li
             div.icon.facebook.com
@@ -79,19 +79,19 @@ block content
             a(href='https://www.livejournal.com/', target='_blank') Livejournal.com
       .group
         .group-title
-          span.badge.badge-success Социальные сети - Россия
+          span.badge.badge-success Соціальні мережі - россія
         ul
           li
             div.icon.vk.com
             a(href='https://vk.com/', target='_blank') ВКонтакте
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
           li
             div.icon.ok.ru
             a(href='https://ok.ru/', target='_blank') Однокласники
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
       .group
         .group-title
-          span.badge.badge-success Социальные сети - Украина
+          span.badge.badge-success Соціальні мережі - Україна
         ul
           li
             div.icon.ukrface.com.ua
@@ -120,7 +120,7 @@ block content
     .col-sm
       .group
         .group-title
-          span.badge.badge-success Электронная почта - Зарубеж
+          span.badge.badge-success Електронна пошта - Зарубіж
         ul
           li
             div.icon.gmail
@@ -136,22 +136,22 @@ block content
             a(href='https://login.yahoo.com/', target='_blank') yahoo.com
       .group
         .group-title
-          span.badge.badge-success Электронная почта - Россия
+          span.badge.badge-success Електронна пошта - росія
         ul
           li
             div.icon.mail.yandex.ua
             a(href='https://mail.yandex.ua/', target='_blank') mail.yandex.ua
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
           li
             div.icon.e.mail.ru
             a(href='https://e.mail.ru/login', target='_blank') e.mail.ru
-            div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+            div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
           li
             div.icon.mail.rambler.ru
             a(href='https://mail.rambler.ru/', target='_blank') mail.rambler.ru
       .group
         .group-title
-          span.badge.badge-success Электронная почта - Украина
+          span.badge.badge-success Електронна пошта - Україна
         ul
           li
             div.icon.mail.ukr.net
