--- a/includes/others.pug
+++ b/includes/others.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
   
 block title
-  title Другое - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)
+  title Інше - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)
 
 block menu
   - var current = 'Другое'
