--- a/includes/bank.pug
+++ b/includes/bank.pug
@@ -130,10 +130,10 @@ block content
             a(href='https://www.ideabank.ua/', target='_blank') ideabank.ua
           li
             div.icon.hotline.finance
-            a(href='https://letyshops.com/r/hotline-2342a743341e', target='_blank') hotline.finance`
+            a(href='https://hotline.finance/ua/', target='_blank') hotline.finance`
           li
             div.icon.vuso.ua
-            a(href='https://letyshops.com/r/vuso-ua-4e0e53bafbcc', target='_blank') vuso.ua`
+            a(href='vuso.ua', target='_blank') vuso.ua`
     .col-sm
       .group
         .group-title
